--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -17,9 +17,9 @@ tap "mongodb/brew"
 tap "norwoodj/tap"
 tap "sonatype-nexus-community/nancy-tap"
 tap "warrensbox/tap"
+brew "xz"
 brew "argyll-cms"
 brew "gdbm"
-brew "xz"
 brew "python@3.10"
 brew "autojump"
 brew "awk"
@@ -40,8 +40,10 @@ brew "dotnet"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
+brew "libarchive"
 brew "sdl2"
 brew "srt"
+brew "tesseract"
 brew "ffmpeg"
 brew "figlet"
 brew "findutils"
@@ -77,6 +79,7 @@ brew "kubernetes-cli"
 brew "krew"
 brew "kubectx"
 brew "kubeseal"
+brew "kubie"
 brew "kustomize"
 brew "ldns"
 brew "libfido2"
@@ -84,6 +87,8 @@ brew "libusb"
 brew "linkerd"
 brew "luv"
 brew "minikube"
+brew "protobuf", link: false
+brew "mitmproxy"
 brew "node@16"
 brew "mongosh"
 brew "mtr"
@@ -91,12 +96,13 @@ brew "nano"
 brew "ncdu"
 brew "neovim"
 brew "nghttp2"
+brew "nikto"
 brew "nvm"
 brew "octant"
 brew "openssh"
+brew "openssl@3"
 brew "packer"
 brew "pnpm"
-brew "protobuf"
 brew "pyenv"
 brew "qpdf"
 brew "redis"
@@ -188,6 +194,7 @@ cask "spotify"
 cask "teamviewer"
 cask "telegram"
 cask "temurin"
+cask "thorium"
 cask "thunderbird"
 cask "tor-browser"
 cask "viber"
@@ -198,3 +205,4 @@ mas "iMovie", id: 408981434
 mas "Keynote", id: 409183694
 mas "Numbers", id: 409203825
 mas "Pages", id: 409201541
+mas "Paste", id: 967805235
