--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -26,11 +26,12 @@ brew "awk"
 brew "aws-iam-authenticator"
 brew "awscli"
 brew "bash"
+brew "glib"
+brew "harfbuzz"
 brew "openjdk"
 brew "bfg"
 brew "node"
 brew "bitwarden-cli"
-brew "glib"
 brew "pyyaml"
 brew "chart-testing"
 brew "coreutils"
@@ -39,7 +40,6 @@ brew "curl"
 brew "dotnet"
 brew "unbound"
 brew "gnutls"
-brew "harfbuzz"
 brew "libarchive"
 brew "sdl2"
 brew "srt"
@@ -120,8 +120,10 @@ brew "tldr"
 brew "tmux"
 brew "transcrypt"
 brew "tree"
+brew "trivy"
 brew "unar"
 brew "velero"
+brew "viddy"
 brew "wakeonlan"
 brew "watch"
 brew "wget"
@@ -133,7 +135,6 @@ brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
 brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
-brew "hashicorp/tap/terraform-ls"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "norwoodj/tap/helm-docs"
@@ -163,6 +164,7 @@ cask "gpg-suite"
 cask "iina"
 cask "imageoptim"
 cask "insomnia"
+cask "intellij-idea-ce"
 cask "iterm2"
 cask "joplin"
 cask "keka"
@@ -182,6 +184,7 @@ cask "moonlight"
 cask "mullvadvpn"
 cask "openineditor-lite"
 cask "openinterminal-lite"
+cask "openlens"
 cask "oversight"
 cask "plex"
 cask "prusaslicer"
@@ -199,6 +202,8 @@ cask "thunderbird"
 cask "tor-browser"
 cask "viber"
 cask "visual-studio-code"
+cask "vscodium"
+cask "whatsapp"
 cask "zoom"
 mas "GarageBand", id: 682658836
 mas "iMovie", id: 408981434
