--- a/k8s/k9s.yaml
+++ b/k8s/k9s.yaml
@@ -1,13 +1,21 @@
 k9s:
+  liveViewAutoRefresh: false
   refreshRate: 2
   maxConnRetry: 5
   enableMouse: false
+  enableImageScan: false
   headless: false
-  logoless: false
+  logoless: true
   crumbsless: false
   readOnly: false
   noExitOnCtrlC: false
   noIcons: false
+  shellPod:
+    image: busybox:1.35.0
+    namespace: default
+    limits:
+      cpu: 100m
+      memory: 100Mi
   skipLatestRevCheck: false
   logger:
     tail: 100
@@ -16,157 +24,97 @@ k9s:
     fullScreenLogs: false
     textWrap: false
     showTime: false
-  currentContext: ap2-stg-eks
-  currentCluster: arn:aws:eks:us-east-2:808259360302:cluster/ap2-stg-eks
+  currentContext: ap3-stg-eks
+  currentCluster: arn:aws:eks:ap-southeast-2:601446024623:cluster/ap3-stg-eks
+  keepMissingClusters: false
   clusters:
     arn:aws:eks:ap-southeast-2:409414527402:cluster/ap3-auprod-eks:
       namespace:
-        active: ap3-prod-master
+        active: prometheus-operator
         lockFavorites: false
         favorites:
-        - external-dns
-        - ap3-prod-master
+        - prometheus-operator
         - default
       view:
         active: "no"
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
     arn:aws:eks:ap-southeast-2:601446024623:cluster/ap3-stg-eks:
       namespace:
-        active: all
+        active: ap3-stg-master
         lockFavorites: false
         favorites:
-        - ap3-stg-qa
+        - mysql-proxy
         - prometheus-operator
+        - athens-proxy
         - buildkite-agent
-        - kube-system
+        - clamav
         - linkerd-multicluster
         - all
         - ap3-stg-master
         - default
       view:
-        active: ds
+        active: pods
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
     arn:aws:eks:eu-central-1:409414527402:cluster/ap3-euprod-eks:
       namespace:
         active: all
         lockFavorites: false
         favorites:
-        - prometheus-operator
         - all
-        - kube-system
-        - ap3-euprod-preprod
+        - mongodb-exporter
+        - prometheus-operator
         - default
       view:
-        active: sts
+        active: servicemonitor
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
     arn:aws:eks:us-east-2:022761819571:cluster/ops-shared-eks:
       namespace:
-        active: prometheus-operator
+        active: mysql-proxy
         lockFavorites: false
         favorites:
-        - prometheus-operator
-        - terraform-cloud-operator
-        - oncall
-        - default
-        - karpenter
-        - grafana
-        - cluster-proportional-autoscaler
+        - mysql-proxy
+        - mysqld-exporter
+        - linkerd
         - all
-        - buildkite-agent
+        - prometheus-operator
+        - oncall
+        - athens-proxy
+        - default
       view:
         active: pods
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
     arn:aws:eks:us-east-2:409414527402:cluster/ap3-prod-eks:
       namespace:
-        active: prometheus-operator
+        active: all
         lockFavorites: false
         favorites:
-        - prometheus-operator
-        - cluster-overprovisioner
-        - all
-        - linkerd-multicluster
+        - mongo-backups
+        - karpenter
         - ap3-prod-master
         - default
       view:
-        active: pods
+        active: cj
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
     arn:aws:eks:us-east-2:808259360302:cluster/ap2-stg-eks:
       namespace:
-        active: ap2-stg-master
+        active: all
         lockFavorites: false
         favorites:
-        - ap2-stg-master
-        - all
-        - kube-system
         - default
       view:
-        active: pod
+        active: po
       featureGates:
         nodeShell: false
-      shellPod:
-        image: busybox:1.35.0
-        command: []
-        args: []
-        namespace: default
-        limits:
-          cpu: 100m
-          memory: 100Mi
-        labels: {}
       portForwardAddress: localhost
   thresholds:
     cpu:
@@ -176,3 +124,4 @@ k9s:
       critical: 90
       warn: 70
   screenDumpDir: /var/folders/_t/fxhbmswn7yj755h6t61x7p4h0000gn/T/k9s-screens-calvin
+  disablePodCounting: false
