--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -50,6 +50,7 @@ brew "libssh2"
 brew "openldap"
 brew "rtmpdump"
 brew "curl"
+brew "dog"
 brew "dotnet"
 brew "libevent"
 brew "p11-kit"
@@ -168,8 +169,9 @@ brew "sonatype-nexus-community/nancy-tap/nancy"
 brew "utkuozdemir/pv-migrate/pv-migrate"
 cask "android-file-transfer"
 cask "android-platform-tools"
+cask "appcleaner"
 cask "atom"
-cask "autodesk-fusion360"
+cask "autodesk-fusion"
 cask "aws-vpn-client"
 cask "balenaetcher"
 cask "bitwarden"
@@ -183,8 +185,10 @@ cask "eloston-chromium"
 cask "exifcleaner"
 cask "firefox"
 cask "focusrite-control"
+cask "gitbutler"
 cask "google-chrome"
 cask "google-chrome-beta"
+cask "google-cloud-sdk"
 cask "google-drive"
 cask "gpg-suite"
 cask "handbrake"
@@ -192,9 +196,11 @@ cask "home-assistant"
 cask "httpie"
 cask "iina"
 cask "imageoptim"
+cask "inkscape"
 cask "insomnia"
 cask "intellij-idea-ce"
 cask "iterm2"
+cask "jiggler"
 cask "joplin"
 cask "keepassxc"
 cask "keka"
@@ -239,6 +245,7 @@ cask "vlc"
 cask "vscodium"
 cask "wireshark"
 cask "zoom"
+mas "GarageBand", id: 682658836
 mas "Paste", id: 967805235
 mas "Xcode", id: 497799835
 vscode "ms-vscode-remote.remote-containers"
