--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -10,11 +10,14 @@ tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/services"
+tap "kreuzwerker/taps"
+tap "localsend/localsend"
 tap "mas-cli/tap"
 tap "mongodb/brew"
 tap "nats-io/nats-tools"
 tap "norwoodj/tap"
 tap "sonatype-nexus-community/nancy-tap"
+tap "tofuutils/tap"
 tap "utkuozdemir/pv-migrate"
 tap "warrensbox/tap"
 brew "act"
@@ -24,6 +27,10 @@ brew "little-cms2"
 brew "webp"
 brew "jpeg-xl"
 brew "aom"
+brew "glib"
+brew "harfbuzz"
+brew "openjdk"
+brew "apktool"
 brew "argyll-cms"
 brew "aspell"
 brew "openssl@1.1"
@@ -31,18 +38,14 @@ brew "python@3.11"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
-brew "cffi", link: false
-brew "docutils", link: false
 brew "awscli"
 brew "bash"
 brew "berkeley-db"
-brew "glib"
-brew "harfbuzz"
-brew "openjdk"
 brew "bfg"
 brew "libuv"
 brew "node"
 brew "bitwarden-cli"
+brew "cffi", link: false
 brew "clamav"
 brew "coreutils"
 brew "cpanminus"
@@ -50,12 +53,19 @@ brew "libssh2"
 brew "openldap"
 brew "rtmpdump"
 brew "curl"
-brew "dog"
+brew "docutils", link: false
 brew "dotnet"
 brew "libevent"
 brew "p11-kit"
 brew "unbound"
 brew "gnutls"
+brew "openjpeg"
+brew "libarchive"
+brew "libass"
+brew "librist"
+brew "openblas"
+brew "openvino"
+brew "pango"
 brew "sdl2"
 brew "srt"
 brew "tesseract"
@@ -64,7 +74,6 @@ brew "figlet"
 brew "findutils"
 brew "frpc"
 brew "fzf"
-brew "libavif"
 brew "gdbm"
 brew "gh"
 brew "ghostscript"
@@ -104,12 +113,13 @@ brew "kubeseal"
 brew "kubie"
 brew "kustomize"
 brew "ldns"
+brew "libavif"
 brew "libfido2"
 brew "libpcap"
 brew "libzip"
 brew "linkerd"
 brew "luv"
-brew "minikube"
+brew "mkcert"
 brew "mongosh"
 brew "mtr"
 brew "nano"
@@ -117,7 +127,6 @@ brew "ncdu"
 brew "neovim"
 brew "nghttp2"
 brew "nikto"
-brew "node@16"
 brew "nvm"
 brew "openssh"
 brew "perl"
@@ -137,7 +146,6 @@ brew "tcptrace"
 brew "telnet"
 brew "terraform-docs"
 brew "terragrunt"
-brew "tfenv"
 brew "tfk8s"
 brew "tflint"
 brew "tfsec"
@@ -145,6 +153,7 @@ brew "thanos"
 brew "tig"
 brew "tldr"
 brew "tmux"
+brew "toilet"
 brew "transcrypt"
 brew "tree"
 brew "trivy"
@@ -161,21 +170,22 @@ brew "derailed/popeye/popeye"
 brew "elastic/tap/ecctl"
 brew "fairwindsops/tap/pluto"
 brew "golangci/tap/golangci-lint"
+brew "kreuzwerker/taps/m1-terraform-provider-helper"
 brew "mas-cli/tap/mas"
 brew "mongodb/brew/mongodb-database-tools"
 brew "nats-io/nats-tools/nats"
 brew "norwoodj/tap/helm-docs"
 brew "sonatype-nexus-community/nancy-tap/nancy"
+brew "tofuutils/tap/tenv"
 brew "utkuozdemir/pv-migrate/pv-migrate"
-cask "android-file-transfer"
 cask "android-platform-tools"
+cask "android-studio"
 cask "appcleaner"
 cask "atom"
 cask "autodesk-fusion"
 cask "aws-vpn-client"
 cask "balenaetcher"
 cask "bitwarden"
-cask "bloomrpc"
 cask "browserosaurus"
 cask "bruno"
 cask "discord"
@@ -185,10 +195,8 @@ cask "eloston-chromium"
 cask "exifcleaner"
 cask "firefox"
 cask "focusrite-control"
-cask "gitbutler"
 cask "google-chrome"
 cask "google-chrome-beta"
-cask "google-cloud-sdk"
 cask "google-drive"
 cask "gpg-suite"
 cask "handbrake"
@@ -201,13 +209,13 @@ cask "insomnia"
 cask "intellij-idea-ce"
 cask "iterm2"
 cask "jiggler"
-cask "joplin"
 cask "keepassxc"
 cask "keka"
 cask "kekaexternalhelper"
 cask "keybase"
 cask "krita"
 cask "little-snitch"
+cask "localsend"
 cask "losslesscut"
 cask "mattermost"
 cask "microsoft-auto-update"
@@ -218,7 +226,6 @@ cask "microsoft-remote-desktop"
 cask "microsoft-word"
 cask "mongodb-compass"
 cask "moonlight"
-cask "mullvadvpn"
 cask "obsidian"
 cask "openineditor-lite"
 cask "openinterminal-lite"
@@ -239,6 +246,7 @@ cask "telegram"
 cask "temurin"
 cask "thorium"
 cask "thunderbird"
+cask "tunnelblick"
 cask "viber"
 cask "visual-studio-code"
 cask "vlc"
@@ -248,4 +256,5 @@ cask "zoom"
 mas "GarageBand", id: 682658836
 mas "Paste", id: 967805235
 mas "Xcode", id: 497799835
+vscode "golang.go"
 vscode "ms-vscode-remote.remote-containers"
