--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "vim/bundle/onedark.vim"]
 	path = vim/bundle/onedark.vim
 	url = https://github.com/joshdick/onedark.vim.git
+[submodule "zsh/custom/plugins/zsh-fast-alias-tips"]
+	path = zsh/custom/plugins/zsh-fast-alias-tips
+	url = https://github.com/decayofmind/zsh-fast-alias-tips.git
